latest version experiments
Testing with explicit trainning

--- a/Dataset Creation (5 choices) Explicit Trainning.ipynb
+++ b/Dataset Creation (5 choices) Explicit Trainning.ipynb
@@ -35,6 +35,69 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.7.7 (default, May  6 2020, 11:45:54) [MSC v.1916 64 bit (AMD64)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(\"Python\", sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "     active environment : sociadisticas\n",
+      "    active env location : C:\\Users\\Usuario\\.conda\\envs\\sociadisticas\n",
+      "            shell level : 2\n",
+      "       user config file : C:\\Users\\Usuario\\.condarc\n",
+      " populated config files : C:\\Users\\Usuario\\.condarc\n",
+      "          conda version : 4.8.3\n",
+      "    conda-build version : 3.18.11\n",
+      "         python version : 3.7.7.final.0\n",
+      "       virtual packages : \n",
+      "       base environment : C:\\ProgramData\\Anaconda3  (writable)\n",
+      "           channel URLs : https://repo.anaconda.com/pkgs/main/win-64\n",
+      "                          https://repo.anaconda.com/pkgs/main/noarch\n",
+      "                          https://repo.anaconda.com/pkgs/r/win-64\n",
+      "                          https://repo.anaconda.com/pkgs/r/noarch\n",
+      "                          https://repo.anaconda.com/pkgs/msys2/win-64\n",
+      "                          https://repo.anaconda.com/pkgs/msys2/noarch\n",
+      "          package cache : C:\\ProgramData\\Anaconda3\\pkgs\n",
+      "                          C:\\Users\\Usuario\\.conda\\pkgs\n",
+      "                          C:\\Users\\Usuario\\AppData\\Local\\conda\\conda\\pkgs\n",
+      "       envs directories : C:\\ProgramData\\Anaconda3\\envs\n",
+      "                          C:\\Users\\Usuario\\.conda\\envs\n",
+      "                          C:\\Users\\Usuario\\AppData\\Local\\conda\\conda\\envs\n",
+      "               platform : win-64\n",
+      "             user-agent : conda/4.8.3 requests/2.23.0 CPython/3.7.7 Windows/10 Windows/10.0.18362\n",
+      "          administrator : True\n",
+      "             netrc file : None\n",
+      "           offline mode : False\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def view_trial(trial_labels,trial_values,trial_ans, n_trial, n_stimuli=6, n_classes=3, n_modes=6):\n",
@@ -43,12 +106,15 @@
     "    print (trial_labels[n_trial])\n",
     "    print (trial_ans[n_trial])\n",
     "\n",
-    "def create_trials(stims,pair):\n",
+    "def create_trials(stims,pair,incl_nogo=True):\n",
     "    #Take a set of stimuli and a set of pairs, then find the mode (letter) of the comparators and combines them.\n",
     "    filt_tr=[pair[1][0]==stim[0] for stim in stims.keys()]# filter the simulus of the mode of the comparator\n",
     "    comprs=np.array(list(stims.keys()))[filt_tr] # Get the set of comparators\n",
     "    comprs_set_1=np.array([[p,q,r,s,t]for p in comprs for q in comprs for r in comprs for s in comprs for t in comprs])# all the combinations of the comparators\n",
-    "    comprs_filt=[(np.sum(cmpr_set==pair[1])==1) for cmpr_set in comprs_set_1]#==1 for the presence of the target comparator ## <2 for target comparator and no answer.\n",
+    "    if incl_nogo:\n",
+    "        comprs_filt=[(np.sum(cmpr_set==pair[1])<2) for cmpr_set in comprs_set_1]# <2 for target comparator and no answer.\n",
+    "    else:\n",
+    "        comprs_filt=[(np.sum(cmpr_set==pair[1])==1) for cmpr_set in comprs_set_1]#==1 for the presence of the target comparator ## <2 for target comparator and no answer.\n",
     "    comprs_set=comprs_set_1[comprs_filt]# filtered set of comparators with the sample presented just once.\n",
     "    train_labels=np.insert(comprs_set,0, pair[0], axis=1)# train labels with sample and comparators\n",
     "    train_answers=np.array([(tr_lbl==pair[1])*1 for tr_lbl in comprs_set]) # Encoded answers for the trials. \n",
@@ -56,8 +122,8 @@
     "    train_values=train_values.reshape((train_values.shape[0],(train_values.shape[1]*train_values.shape[2])))# create a list of the encoded values of the trial\n",
     "    return train_labels,train_values,train_answers\n",
     "\n",
-    "def create_set(trials_pairs, stims):\n",
-    "    trialset=[create_trials(stims,pair) for pair in trials_pairs]\n",
+    "def create_set(trials_pairs, stims, incl_nogo=True):\n",
+    "    trialset=[create_trials(stims,pair, incl_nogo) for pair in trials_pairs]\n",
     "    labels=np.array([tr_lb for tr_pr in trialset for tr_lb in tr_pr[0]])\n",
     "    values=np.array([tr_lb for tr_pr in trialset for tr_lb in tr_pr[1]])\n",
     "    answer=np.array([tr_lb for tr_pr in trialset for tr_lb in tr_pr[2]])\n",
@@ -66,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(38220, 6)\n",
+      "(38220, 126)\n",
+      "(38220, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_labels.shape)\n",
+    "print(train_values.shape)\n",
+    "print(train_answer.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,35 +237,31 @@
     "                                    \"Comparator_2\",\n",
     "                                    \"Comparator_3\",\n",
     "                                    \"Comparator_4\",\n",
-    "                                    \"Comparator_5\"]).to_csv('train_labels.csv',index=False)#train_labels\n",
-    "pd.DataFrame(train_values).to_csv('train_values.csv',index=False)#train_values\n",
+    "                                    \"Comparator_5\"]).to_csv('nogo_explicit/train_labels.csv',index=False)#train_labels\n",
+    "pd.DataFrame(train_values).to_csv('nogo_explicit/train_values.csv',index=False)#train_values\n",
     "pd.DataFrame(train_answer,columns=[\"Choice_1\",\n",
     "                        \"Choice_2\",\n",
     "                        \"Choice_3\",\n",
     "                        \"Choice_4\",\n",
-    "                        \"Choice_5\"]).to_csv('train_answer.csv',index=False)#train_answer"
+    "                        \"Choice_5\"]).to_csv('nogo_explicit/train_answer.csv',index=False)#train_answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13556 38220\n",
+      "30784 76008\n",
       "[[[0 0 1 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
-      "  [0 0 1 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]]\n",
-      "\n",
-      " [[0 0 0 0 0 0 0]\n",
-      "  [1 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 1 0]\n",
       "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
@@ -186,14 +269,18 @@
       "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
-      "  [0 1 0 0 0 0 0]\n",
+      "  [0 0 0 0 1 0 0]\n",
       "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
-      "  [0 1 0 0 0 0 0]\n",
+      "  [1 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 1 0 0]\n",
       "  [0 0 0 0 0 0 0]]]\n",
-      "['A3' 'B3' 'B1' 'B4' 'B2' 'B2']\n",
-      "[1 0 0 0 0]\n"
+      "['A3' 'B6' 'B4' 'B5' 'B1' 'B5']\n",
+      "[0 0 0 0 0]\n"
      ]
     }
    ],
@@ -212,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,50 +318,50 @@
     "                                    \"Comparator_2\",\n",
     "                                    \"Comparator_3\",\n",
     "                                    \"Comparator_4\",\n",
-    "                                    \"Comparator_5\"]).to_csv('reflexivity_labels.csv',index=False)#reflexivity_labels\n",
-    "pd.DataFrame(reflexivity_values).to_csv('reflexivity_values.csv',index=False)#reflexivity_values\n",
+    "                                    \"Comparator_5\"]).to_csv('nogo_explicit/reflexivity_labels.csv',index=False)#reflexivity_labels\n",
+    "pd.DataFrame(reflexivity_values).to_csv('nogo_explicit/reflexivity_values.csv',index=False)#reflexivity_values\n",
     "pd.DataFrame(reflexivity_answer,columns=[\"Choice_1\",\n",
     "                        \"Choice_2\",\n",
     "                        \"Choice_3\",\n",
     "                        \"Choice_4\",\n",
-    "                        \"Choice_5\"]).to_csv('reflexivity_answer.csv',index=False)#reflexivity_answer"
+    "                        \"Choice_5\"]).to_csv('nogo_explicit/reflexivity_answer.csv',index=False)#reflexivity_answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40251 56490\n",
+      "50684 112836\n",
       "[[[0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [1 0 0 0 0 0 0]]\n",
+      "  [0 0 1 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 1 0 0]]\n",
+      "  [1 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 1 0]]\n",
+      "  [0 0 0 1 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 1 0 0 0 0]]\n",
+      "  [0 1 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 1 0 0 0 0]]\n",
+      "  [0 0 1 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [1 0 0 0 0 0 0]]]\n",
-      "['C1' 'C5' 'C6' 'C3' 'C3' 'C1']\n",
-      "[0 0 0 0 1]\n"
+      "  [1 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]]\n",
+      "['B3' 'B1' 'B4' 'B2' 'B3' 'B1']\n",
+      "[0 0 0 1 0]\n"
      ]
     }
    ],
@@ -292,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,30 +398,38 @@
     "                                    \"Comparator_2\",\n",
     "                                    \"Comparator_3\",\n",
     "                                    \"Comparator_4\",\n",
-    "                                    \"Comparator_5\"]).to_csv('symmetry_labels.csv',index=False)#symmetry_labels\n",
-    "pd.DataFrame(symmetry_values).to_csv('symmetry_values.csv',index=False)#symmetry_values\n",
+    "                                    \"Comparator_5\"]).to_csv('nogo_explicit/symmetry_labels.csv',index=False)#symmetry_labels\n",
+    "pd.DataFrame(symmetry_values).to_csv('nogo_explicit/symmetry_values.csv',index=False)#symmetry_values\n",
     "pd.DataFrame(symmetry_answer,columns=[\"Choice_1\",\n",
     "                        \"Choice_2\",\n",
     "                        \"Choice_3\",\n",
     "                        \"Choice_4\",\n",
-    "                        \"Choice_5\"]).to_csv('symmetry_answer.csv',index=False)#symmetry_answer"
+    "                        \"Choice_5\"]).to_csv('nogo_explicit/symmetry_answer.csv',index=False)#symmetry_answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14899 38220\n",
+      "37514 76008\n",
       "[[[0 0 0 0 0 0 0]\n",
-      "  [0 0 1 0 0 0 0]\n",
+      "  [0 0 0 1 0 0 0]\n",
       "  [0 0 0 0 0 0 0]]\n",
       "\n",
-      " [[0 0 0 0 1 0 0]\n",
+      " [[1 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
+      "\n",
+      " [[1 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
+      "\n",
+      " [[1 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]]\n",
       "\n",
@@ -342,19 +437,11 @@
       "  [0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]]\n",
       "\n",
-      " [[0 0 0 0 0 1 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]]\n",
-      "\n",
-      " [[0 0 0 0 0 1 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]]\n",
-      "\n",
-      " [[0 0 0 0 0 1 0]\n",
+      " [[0 0 1 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]]]\n",
-      "['B3' 'A5' 'A3' 'A6' 'A6' 'A6']\n",
-      "[0 1 0 0 0]\n"
+      "['B4' 'A1' 'A1' 'A1' 'A3' 'A3']\n",
+      "[0 0 0 0 0]\n"
      ]
     }
    ],
@@ -372,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,32 +492,28 @@
     "                                    \"Comparator_2\",\n",
     "                                    \"Comparator_3\",\n",
     "                                    \"Comparator_4\",\n",
-    "                                    \"Comparator_5\"]).to_csv('transitivity_labels.csv',index=False)#transitivity_labels\n",
-    "pd.DataFrame(transitivity_values).to_csv('transitivity_values.csv',index=False)#transitivity_values\n",
+    "                                    \"Comparator_5\"]).to_csv('nogo_explicit/transitivity_labels.csv',index=False)#transitivity_labels\n",
+    "pd.DataFrame(transitivity_values).to_csv('nogo_explicit/transitivity_values.csv',index=False)#transitivity_values\n",
     "pd.DataFrame(transitivity_answer,columns=[\"Choice_1\",\n",
     "                        \"Choice_2\",\n",
     "                        \"Choice_3\",\n",
     "                        \"Choice_4\",\n",
-    "                        \"Choice_5\"]).to_csv('transitivity_answer.csv',index=False)#transitivity_answer"
+    "                        \"Choice_5\"]).to_csv('nogo_explicit/transitivity_answer.csv',index=False)#transitivity_answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7029 18750\n",
-      "[[[0 0 1 0 0 0 0]\n",
+      "35489 37500\n",
+      "[[[0 0 0 0 0 1 0]\n",
       "  [0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]]\n",
-      "\n",
-      " [[0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [0 1 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
@@ -438,17 +521,21 @@
       "\n",
       " [[0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
-      "  [1 0 0 0 0 0 0]]\n",
+      "  [0 0 0 0 1 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 1 0 0 0 0]]\n",
+      "  [0 1 0 0 0 0 0]]\n",
       "\n",
       " [[0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 0 1 0 0 0]]]\n",
-      "['A3' 'C2' 'C4' 'C1' 'C3' 'C4']\n",
-      "[0 0 0 1 0]\n"
+      "  [0 0 0 0 1 0 0]]\n",
+      "\n",
+      " [[0 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 1 0]]]\n",
+      "['A6' 'C4' 'C5' 'C2' 'C5' 'C6']\n",
+      "[0 0 0 0 1]\n"
      ]
     }
    ],
@@ -466,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,28 +580,36 @@
     "                                    \"Comparator_2\",\n",
     "                                    \"Comparator_3\",\n",
     "                                    \"Comparator_4\",\n",
-    "                                    \"Comparator_5\"]).to_csv('equivalence_labels.csv',index=False)#equivalence_labels\n",
-    "pd.DataFrame(equivalence_values).to_csv('equivalence_values.csv',index=False)#equivalence_values\n",
+    "                                    \"Comparator_5\"]).to_csv('nogo_explicit/equivalence_labels.csv',index=False)#equivalence_labels\n",
+    "pd.DataFrame(equivalence_values).to_csv('nogo_explicit/equivalence_values.csv',index=False)#equivalence_values\n",
     "pd.DataFrame(equivalence_answer,columns=[\"Choice_1\",\n",
     "                        \"Choice_2\",\n",
     "                        \"Choice_3\",\n",
     "                        \"Choice_4\",\n",
-    "                        \"Choice_5\"]).to_csv('equivalence_answer.csv',index=False)#equivalence_answer"
+    "                        \"Choice_5\"]).to_csv('nogo_explicit/equivalence_answer.csv',index=False)#equivalence_answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16095 18750\n",
+      "1173 37500\n",
       "[[[0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 1 0]]\n",
+      "  [1 0 0 0 0 0 0]]\n",
+      "\n",
+      " [[0 1 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 1 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]\n",
+      "  [0 0 0 0 0 0 0]]\n",
       "\n",
       " [[1 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
@@ -524,19 +619,11 @@
       "  [0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]]\n",
       "\n",
-      " [[0 0 0 1 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]]\n",
-      "\n",
       " [[0 0 0 0 1 0 0]\n",
       "  [0 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]]\n",
-      "\n",
-      " [[1 0 0 0 0 0 0]\n",
-      "  [0 0 0 0 0 0 0]\n",
       "  [0 0 0 0 0 0 0]]]\n",
-      "['C6' 'A1' 'A6' 'A4' 'A5' 'A1']\n",
-      "[0 1 0 0 0]\n"
+      "['C1' 'A2' 'A4' 'A1' 'A6' 'A5']\n",
+      "[0 0 1 0 0]\n"
      ]
     }
    ],
