Include no-go responses
Update.
filter changed from ==2, to <3 to include no go trials as valid

--- a/Dataset Creation (5 choices) Explicit Trainning (correction).ipynb
+++ b/Dataset Creation (5 choices) Explicit Trainning (correction).ipynb
@@ -491,8 +491,8 @@
        "symmetry          12\n",
        "train             12\n",
        "explicit_train     9\n",
-       "equivalence        6\n",
        "transitivity       6\n",
+       "equivalence        6\n",
        "Name: pair_subset, dtype: int64"
       ]
      },
@@ -542,7 +542,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start:::::::: Sat, 23 May 2020 22:15:55\n"
+      "Start:::::::: Sat, 23 May 2020 22:36:09\n",
+      "A1 processed Sun, 24 May 2020 04:18:42\n"
      ]
     }
    ],
@@ -568,7 +569,7 @@
     "                                                                  (pairs_dataset.st_comparator==st_comparator_loop)]\n",
     "                            trial_pairs.append(search_pair.sum())\n",
     "                            pair_info.append([id_trial,st_sample, st_comparator_loop, search_pair.sum()])\n",
-    "                        if (0 in list(set(trial_pairs)))&(len(list(set(trial_pairs)))==2):\n",
+    "                        if (0 in list(set(trial_pairs)))&(len(list(set(trial_pairs)))<3):\n",
     "                            trial_select.append([id_trial,st_sample,\n",
     "                                                 st_comp1,st_comp2,st_comp3,st_comp4,st_comp5,\n",
     "                                                 trial_pairs[0],trial_pairs[1],trial_pairs[2],trial_pairs[3],trial_pairs[4]\n",
